--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,1 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Lato&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Mono:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;1,100&display=swap');*{margin:0;padding:0;box-sizing:border-box}body{background-color:rgb(250,250,250);color:#23252b;font-family:'Roboto Mono',monospace;font-weight:300;text-transform:capitalize}.App{display:flex;justify-content:center;flex-direction:column;text-align:center;width:100%}.first-section{display:flex;flex-direction:column;justify-content:center;text-align:center;align-items:center;background-size:cover;background-repeat:no-repeat}section{height:100vh;width:100%;display: flex;flex-direction: column;text-align: center;align-items: center;}.second-section{padding: 25px; }.second-section h4{margin-bottom: 50px;}.img-container{display:flex;justify-content:center;text-align:center;align-items:center}.weather-container{display:flex;flex-wrap:wrap;flex-direction: column; text-align:center;align-items:center;justify-content:center;width:100%;height:100%;background-color:rgb(250,250,250);padding:6px}.temperature{font-size:30px;font-weight:500;width:100%}.temperature span{font-size:15px;font-weight:400} @media screen and (max-width:750px) {.img-wrapper img{height:192px;width:192px}.card-container{width:380px;}.details-card{width: 500px;display: flex;flex-wrap: wrap; justify-content: center;}.second-section{padding:0;}.second-section h4{margin-bottom: 10px;}}.card-container{display: flex;gap:9px;width:650px;text-align: left; overflow-x: auto;margin-top: 20px;min-height: 250px;}.card{display: flex;border-radius: 10px; width: 5rem;background-color: rgba(0, 0, 0, 0.9); height: 200px; padding: 10px;text-align: center; justify-content: center; align-items: center;color: white;}.wcards{display:flex;flex-direction: column; height:110px;width: 160px; background-color: rgba(0, 0, 0, 0.9);gap:10px;padding:20px;border-radius: 10px;text-align: left;}.details-card{display: flex; gap: 10px;color: rgb(250, 250, 250);width: 100%;}.details-card p{font-size: 12px;}.details-card h5{font-size: 15px;}.search-bar input:focus{outline: 1px solid green;} .search-bar input{border-radius: 10px;height: 30px; border: 1px solid blueviolet; padding: 10px;margin-right: 10px;}.search-bar button:hover{cursor: pointer; background-color: aquamarine;} .search-bar button{transition: 300ms ease-in-out; border-radius: 10px; border: none; background-color: aqua; padding: 5px 8px 5px 8px; } @media screen and (max-width:480px){.card-container{max-width: 300px;}.card{height: 150px;padding: 10px;width: 3.5rem;} .img-container img{width:270px;height: auto;} .card{font-size: 12px;}.card img{width: 30px; height: auto;}}
